[options]
py_modules = About.py
 advanced_settings.py
 automator_viewer.py
 backup_manager.py
 config.py
 file_editor.py
 magisk_downloads.py
 magisk_modules.py
 Main.py
 modules.py
 package_manager.py
 partition_manager.py
 payload_dumper.py
 phone.py
 runtime.py
 set_version.py
 wifi.py

[extract_messages]
input_dirs = .
output_file = locales/messages.pot
